# 537make

./: .gitignore  CMakeLists.txt  README  README.md  makefile  partner.txt
headers/: create.h  parser.h  tools.h
include/: build_structures.h  parser.h
source/: parser.c
src/: CMakeLists.txt  README  build_spec.c  build_spec.h  build_structures.c  command.c  command.h  graph.c  graph.h  list.c  list.h  main.c  main.h  makefile  parser.c  parser.h  partner.txt  project_tools.c  test_build_spec.cpp  test_command.cpp  test_graph.cpp  test_parser.cpp  tools.c  tools.h
tests/: catch.hpp  test_main.cpp
tests/whitespace_testcase/: 537make
